code split into multiple files, project renamed to Ymacs

--- a/test/index.html
+++ b/test/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>TagForge admin</title>
     <link rel="stylesheet" type="text/css" href="dl/css/default.css" />
-    <link rel="stylesheet" type="text/css" href="ymacs/css/x-codeeditor.css" />
+    <link rel="stylesheet" type="text/css" href="ymacs/css/ymacs.css" />
     <link rel="stylesheet" type="text/css" href="test.css" />
   </head>
   <body>
@@ -15,7 +15,12 @@
     </script>
     <script src="dl/js/thelib.js"></script>
     <!-- <script src="http://www.jstoolkit.com.d/src/js/all-scripts.jsx?crunch=0;path=http://www.jstoolkit.com.d/src/js"></script> -->
-    <script src="ymacs/js/x-codeeditor.js"></script>
+    <script src="ymacs/js/ymacs.js"></script>
+    <script src="ymacs/js/ymacs-buffer.js"></script>
+    <script src="ymacs/js/ymacs-marker.js"></script>
+    <script src="ymacs/js/ymacs-commands.js"></script>
+    <script src="ymacs/js/ymacs-keymap.js"></script>
+    <script src="ymacs/js/ymacs-isearch.js"></script>
     <script src="test.js"></script>
   </body>
 </html>
