basic syntax highlighting, still needs a lot of work :-/

--- a/test/index.html
+++ b/test/index.html
@@ -22,6 +22,7 @@
     <script src="ymacs/js/ymacs-commands.js"></script>
     <script src="ymacs/js/ymacs-keymap.js"></script>
     <script src="ymacs/js/ymacs-isearch.js"></script>
+    <Script src="ymacs/js/ymacs-tokenizer.js"></Script>
     <script src="test.js"></script>
   </body>
 </html>
