--- a/test/index.html
+++ b/test/index.html
@@ -17,6 +17,7 @@
     <!-- <script src="http://www.jstoolkit.com.d/src/js/all-scripts.jsx?crunch=0;path=http://www.jstoolkit.com.d/src/js"></script> -->
     <script src="ymacs/js/ymacs.js"></script>
     <script src="ymacs/js/ymacs-frame.js"></script>
+    <script src="ymacs/js/ymacs-textprop.js"></script>
     <script src="ymacs/js/ymacs-buffer.js"></script>
     <script src="ymacs/js/ymacs-marker.js"></script>
     <script src="ymacs/js/ymacs-commands.js"></script>
