separated the JS tokenizer, and started XML tokenizer, at which point I begin to think that the tokenizers should be rewritten :-p

--- a/test/index.html
+++ b/test/index.html
@@ -23,7 +23,9 @@
     <script src="ymacs/js/ymacs-commands.js"></script>
     <script src="ymacs/js/ymacs-keymap.js"></script>
     <script src="ymacs/js/ymacs-isearch.js"></script>
-    <Script src="ymacs/js/ymacs-tokenizer.js"></Script>
+    <script src="ymacs/js/ymacs-tokenizer.js"></script>
+    <script src="ymacs/js/ymacs-tokenizer-javascript.js"></script>
+    <script src="ymacs/js/ymacs-tokenizer-xml.js"></script>
     <script src="test.js"></script>
   </body>
 </html>
