renamed some files; preparing for modes

--- a/test/index.html
+++ b/test/index.html
@@ -24,8 +24,8 @@
     <script src="ymacs/js/ymacs-keymap.js"></script>
     <script src="ymacs/js/ymacs-isearch.js"></script>
     <script src="ymacs/js/ymacs-tokenizer.js"></script>
-    <script src="ymacs/js/ymacs-tokenizer-javascript.js"></script>
-    <script src="ymacs/js/ymacs-tokenizer-xml.js"></script>
+    <script src="ymacs/js/ymacs-mode-js.js"></script>
+    <script src="ymacs/js/ymacs-mode-xml.js"></script>
     <script src="test.js"></script>
   </body>
 </html>
