--- a/test/index.html
+++ b/test/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html>
   <head>
-    <title>TagForge admin</title>
+    <title>Ymacs -- An Emacs-like editor for the Web</title>
     <link rel="stylesheet" type="text/css" href="dl/css/default.css" />
     <link rel="stylesheet" type="text/css" href="ymacs/css/ymacs.css" />
     <link rel="stylesheet" type="text/css" href="test.css" />
