Added forward_sexp and backward_sexp, and further but futile attempts to optimize looking_back.

--- a/test/index.html
+++ b/test/index.html
@@ -16,6 +16,7 @@
     <script src="dl/js/thelib.js"></script>
     <!-- <script src="http://www.jstoolkit.com.d/src/js/all-scripts.jsx?crunch=0;path=http://www.jstoolkit.com.d/src/js"></script> -->
     <script src="ymacs/js/ymacs.js"></script>
+    <script src="ymacs/js/ymacs-regexp.js"></script>
     <script src="ymacs/js/ymacs-frame.js"></script>
     <script src="ymacs/js/ymacs-textprop.js"></script>
     <script src="ymacs/js/ymacs-buffer.js"></script>
