moved Emacs keymap into its own file, added some documentation, added DASH keyboard char (otherwise inaccessible since it's literally used as a separator) and improved C-x =.

--- a/test/index.html
+++ b/test/index.html
@@ -13,8 +13,8 @@
     <script>
       window.Dynarch_Base_Url = "./dl";
     </script>
-    <script src="dl/js/thelib.js"></script>
-    <!-- <script src="http://www.jstoolkit.com.d/src/js/all-scripts.jsx?crunch=0;path=http://www.jstoolkit.com.d/src/js"></script> -->
+    <!-- <script src="dl/js/thelib.js"></script> -->
+    <script src="http://www.jstoolkit.com.d/src/js/all-scripts.jsx?crunch=0;path=http://www.jstoolkit.com.d/src/js"></script>
     <script src="ymacs/js/ymacs.js"></script>
     <script src="ymacs/js/ymacs-regexp.js"></script>
     <script src="ymacs/js/ymacs-frame.js"></script>
@@ -23,7 +23,8 @@
     <script src="ymacs/js/ymacs-marker.js"></script>
     <script src="ymacs/js/ymacs-commands.js"></script>
     <script src="ymacs/js/ymacs-keymap.js"></script>
-    <script src="ymacs/js/ymacs-isearch.js"></script>
+    <script src="ymacs/js/ymacs-keymap-emacs.js"></script>
+    <script src="ymacs/js/ymacs-keymap-isearch.js"></script>
     <script src="ymacs/js/ymacs-tokenizer.js"></script>
     <script src="ymacs/js/ymacs-mode-js.js"></script>
     <script src="ymacs/js/ymacs-mode-xml.js"></script>
