--- a/test/index.html
+++ b/test/index.html
@@ -13,8 +13,8 @@
     <script>
       window.Dynarch_Base_Url = "./dl";
     </script>
-    <!-- <script src="dl/js/thelib.js"></script> -->
-    <script src="http://www.jstoolkit.com.d/src/js/all-scripts.jsx?crunch=0;path=http://www.jstoolkit.com.d/src/js"></script>
+    <script src="dl/js/thelib.js"></script>
+    <!-- <script src="http://www.jstoolkit.com.d/src/js/all-scripts.jsx?crunch=0;path=http://www.jstoolkit.com.d/src/js"></script> -->
     <script src="ymacs/js/ymacs.js"></script>
     <script src="ymacs/js/ymacs-regexp.js"></script>
     <script src="ymacs/js/ymacs-frame.js"></script>
