--- a/test/index.html
+++ b/test/index.html
@@ -26,6 +26,7 @@
     <script src="ymacs/js/ymacs-keymap-emacs.js"></script>
     <script src="ymacs/js/ymacs-keymap-isearch.js"></script>
     <script src="ymacs/js/ymacs-tokenizer.js"></script>
+    <script src="ymacs/js/ymacs-mode-lisp.js"></script>
     <script src="ymacs/js/ymacs-mode-js.js"></script>
     <script src="ymacs/js/ymacs-mode-xml.js"></script>
     <script src="test.js"></script>
