using some relative paths to load files

--- a/test/index.html
+++ b/test/index.html
@@ -12,23 +12,25 @@
     </center>
     <script>
       window.Dynarch_Base_Url = "./dl";
+      window.YMACS_SRC_PATH = "../src/js/";
     </script>
     <script src="dl/js/thelib.js"></script>
     <!-- <script src="http://www.jstoolkit.com.d/src/js/all-scripts.jsx?crunch=0;path=http://www.jstoolkit.com.d/src/js"></script> -->
-    <script src="ymacs/js/ymacs.js"></script>
-    <script src="ymacs/js/ymacs-regexp.js"></script>
-    <script src="ymacs/js/ymacs-frame.js"></script>
-    <script src="ymacs/js/ymacs-textprop.js"></script>
-    <script src="ymacs/js/ymacs-buffer.js"></script>
-    <script src="ymacs/js/ymacs-marker.js"></script>
-    <script src="ymacs/js/ymacs-commands.js"></script>
-    <script src="ymacs/js/ymacs-keymap.js"></script>
-    <script src="ymacs/js/ymacs-keymap-emacs.js"></script>
-    <script src="ymacs/js/ymacs-keymap-isearch.js"></script>
-    <script src="ymacs/js/ymacs-tokenizer.js"></script>
-    <script src="ymacs/js/ymacs-mode-lisp.js"></script>
-    <script src="ymacs/js/ymacs-mode-js.js"></script>
-    <script src="ymacs/js/ymacs-mode-xml.js"></script>
+    <script src="../src/js/ymacs.js"></script>
+    <script src="../src/js/ymacs-regexp.js"></script>
+    <script src="../src/js/ymacs-frame.js"></script>
+    <script src="../src/js/ymacs-textprop.js"></script>
+    <script src="../src/js/ymacs-buffer.js"></script>
+    <script src="../src/js/ymacs-marker.js"></script>
+    <script src="../src/js/ymacs-commands.js"></script>
+    <script src="../src/js/ymacs-keymap.js"></script>
+    <script src="../src/js/ymacs-keymap-emacs.js"></script>
+    <script src="../src/js/ymacs-keymap-isearch.js"></script>
+    <script src="../src/js/ymacs-tokenizer.js"></script>
+    <script src="../src/js/ymacs-mode-lisp.js"></script>
+    <script src="../src/js/ymacs-mode-js.js"></script>
+    <script src="../src/js/ymacs-mode-xml.js"></script>
+    <script src="../src/js/ymacs-mode-markdown.js"></script>
     <script src="test.js"></script>
   </body>
 </html>
