--- a/test/index.html
+++ b/test/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Ymacs -- An Emacs-like editor for the Web</title>
     <link rel="stylesheet" type="text/css" href="dl/css/default.css" />
-    <link rel="stylesheet" type="text/css" href="ymacs/css/ymacs.css" />
+    <link rel="stylesheet" type="text/css" href="../src/css/ymacs.css" />
     <link rel="stylesheet" type="text/css" href="test.css" />
   </head>
   <body>
