Added a "Not Firefox" warning for now, since I haven't got the time to test/fix it for other browsers.

--- a/test/index.html
+++ b/test/index.html
@@ -31,6 +31,15 @@
     <script src="../src/js/ymacs-mode-js.js"></script>
     <script src="../src/js/ymacs-mode-xml.js"></script>
     <script src="../src/js/ymacs-mode-markdown.js"></script>
+
+    <div style="display: none">
+      <div id="browser-warning" style="padding: 1em; width: 20em;">
+        <b>Note that Ymacs is only tested with Firefox for now.</b><br /><br />
+        This is mentioned on the <a href="http://www.ymacs.org/"
+        target="_blank">project page</a>,
+        but I just thought I'd say it again.
+      </div>
+    </div>
     <script src="test.js"></script>
   </body>
 </html>
