--- a/test/index.html
+++ b/test/index.html
@@ -27,6 +27,7 @@
     <script src="../src/js/ymacs-keymap-emacs.js"></script>
     <script src="../src/js/ymacs-keymap-isearch.js"></script>
     <script src="../src/js/ymacs-tokenizer.js"></script>
+    <script src="../src/js/ymacs-mode-paren-match.js"></script>
     <script src="../src/js/ymacs-mode-lisp.js"></script>
     <script src="../src/js/ymacs-mode-js.js"></script>
     <script src="../src/js/ymacs-mode-xml.js"></script>
