--- a/test/index.html
+++ b/test/index.html
@@ -23,6 +23,7 @@
     <script src="../src/js/ymacs-buffer.js"></script>
     <script src="../src/js/ymacs-marker.js"></script>
     <script src="../src/js/ymacs-commands.js"></script>
+    <script src="../src/js/ymacs-commands-utils.js"></script>
     <script src="../src/js/ymacs-keymap.js"></script>
     <script src="../src/js/ymacs-keymap-emacs.js"></script>
     <script src="../src/js/ymacs-keymap-isearch.js"></script>
