some changes in preparation for better interactive commands (the aim is to support Emacs-style (interactive "args"), a better minibuffer and M-x eval-region)

--- a/test/index.html
+++ b/test/index.html
@@ -22,8 +22,10 @@
     <script src="../src/js/ymacs-textprop.js"></script>
     <script src="../src/js/ymacs-buffer.js"></script>
     <script src="../src/js/ymacs-marker.js"></script>
+    <script src="../src/js/ymacs-minibuffer.js"></script>
     <script src="../src/js/ymacs-commands.js"></script>
     <script src="../src/js/ymacs-commands-utils.js"></script>
+    <script src="../src/js/ymacs-interactive.js"></script>
     <script src="../src/js/ymacs-keymap.js"></script>
     <script src="../src/js/ymacs-keymap-emacs.js"></script>
     <script src="../src/js/ymacs-keymap-isearch.js"></script>
