Using Ymacs_Interactive for all commands where it makes sense.

--- a/test/index.html
+++ b/test/index.html
@@ -20,6 +20,7 @@
     <script src="../src/js/ymacs-regexp.js"></script>
     <script src="../src/js/ymacs-frame.js"></script>
     <script src="../src/js/ymacs-textprop.js"></script>
+    <script src="../src/js/ymacs-exception.js"></script>
     <script src="../src/js/ymacs-interactive.js"></script>
     <script src="../src/js/ymacs-buffer.js"></script>
     <script src="../src/js/ymacs-marker.js"></script>
