added a simple CSS mode, small fix in isearch

--- a/test/index.html
+++ b/test/index.html
@@ -35,6 +35,7 @@
     <script src="../src/js/ymacs-mode-lisp.js"></script>
     <script src="../src/js/ymacs-mode-js.js"></script>
     <script src="../src/js/ymacs-mode-xml.js"></script>
+    <script src="../src/js/ymacs-mode-css.js"></script>
     <script src="../src/js/ymacs-mode-markdown.js"></script>
 
     <div style="display: none">
