Fixes for Chrome and Safari

--- a/test/index.html
+++ b/test/index.html
@@ -17,6 +17,7 @@
     <script src="dl/js/thelib.js"></script>
     <!-- <script src="http://www.jstoolkit.com.d/src/js/all-scripts.jsx?crunch=0;path=http://www.jstoolkit.com.d/src/js"></script> -->
     <script src="../src/js/ymacs.js"></script>
+    <script src="../src/js/ymacs-keyboard.js"></script>
     <script src="../src/js/ymacs-regexp.js"></script>
     <script src="../src/js/ymacs-frame.js"></script>
     <script src="../src/js/ymacs-textprop.js"></script>
