--- a/test/index.html
+++ b/test/index.html
@@ -15,7 +15,7 @@
       window.YMACS_SRC_PATH = "../src/js/";
     </script>
     <script src="dl/js/thelib.js"></script>
-    <!-- <script src="http://www.jstoolkit.com.d/src/js/all-scripts.jsx?crunch=0;path=http://www.jstoolkit.com.d/src/js"></script> -->
+    <!-- <script src="http://www.jstoolkit.com.d:8090/src/js/all-scripts.jsx?crunch=0;path=http://www.jstoolkit.com.d:8090/src/js"></script> -->
     <script src="../src/js/ymacs.js"></script>
     <script src="../src/js/ymacs-keyboard.js"></script>
     <script src="../src/js/ymacs-regexp.js"></script>
