get rid of DlLayout for split/resize

--- a/test/index.html
+++ b/test/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -16,7 +16,6 @@
       window.YMACS_SRC_PATH = "../src/js/";
     </script>
     <script src="dl/js/thelib.js"></script>
-    <!-- <script src="http://www.jstoolkit.com.d:8090/src/js/all-scripts.jsx?crunch=0;path=http://www.jstoolkit.com.d:8090/src/js"></script> -->
     <script src="../src/js/ymacs.js"></script>
     <script src="../src/js/ymacs-regexp.js"></script>
     <script src="../src/js/ymacs-frame.js"></script>
@@ -39,14 +38,6 @@
     <script src="../src/js/ymacs-mode-css.js"></script>
     <script src="../src/js/ymacs-mode-markdown.js"></script>
 
-    <div style="display: none">
-      <div id="browser-warning" style="padding: 1em; width: 20em;">
-        <b>Note that Ymacs is only tested with Firefox for now.</b><br /><br />
-        This is mentioned on the <a href="http://www.ymacs.org/"
-        target="_blank">project page</a>,
-        but I just thought I'd say it again.
-      </div>
-    </div>
     <script src="test.js"></script>
   </body>
 </html>
