--- a/test/index.html
+++ b/test/index.html
@@ -16,28 +16,28 @@
       window.YMACS_SRC_PATH = "../src/js/";
     </script>
     <script src="dl/js/thelib.js"></script>
-    <script src="../src/js/ymacs.js"></script>
-    <script src="../src/js/ymacs-regexp.js"></script>
-    <script src="../src/js/ymacs-frame.js"></script>
-    <script src="../src/js/ymacs-textprop.js"></script>
-    <script src="../src/js/ymacs-exception.js"></script>
-    <script src="../src/js/ymacs-interactive.js"></script>
-    <script src="../src/js/ymacs-buffer.js"></script>
-    <script src="../src/js/ymacs-marker.js"></script>
-    <script src="../src/js/ymacs-commands.js"></script>
-    <script src="../src/js/ymacs-commands-utils.js"></script>
-    <script src="../src/js/ymacs-keymap.js"></script>
-    <script src="../src/js/ymacs-keymap-emacs.js"></script>
-    <script src="../src/js/ymacs-keymap-isearch.js"></script>
-    <script src="../src/js/ymacs-minibuffer.js"></script>
-    <script src="../src/js/ymacs-tokenizer.js"></script>
-    <script src="../src/js/ymacs-mode-paren-match.js"></script>
-    <script src="../src/js/ymacs-mode-lisp.js"></script>
-    <script src="../src/js/ymacs-mode-js.js"></script>
-    <script src="../src/js/ymacs-mode-xml.js"></script>
-    <script src="../src/js/ymacs-mode-css.js"></script>
-    <script src="../src/js/ymacs-mode-markdown.js"></script>
+    <script type="module" src="../src/js/ymacs-buffer.js"></script>
+    <script type="module" src="../src/js/ymacs-commands-utils.js"></script>
+    <script type="module" src="../src/js/ymacs-commands.js"></script>
+    <script type="module" src="../src/js/ymacs-exception.js"></script>
+    <script type="module" src="../src/js/ymacs-frame.js"></script>
+    <script type="module" src="../src/js/ymacs-interactive.js"></script>
+    <script type="module" src="../src/js/ymacs-keymap-emacs.js"></script>
+    <script type="module" src="../src/js/ymacs-keymap-isearch.js"></script>
+    <script type="module" src="../src/js/ymacs-keymap.js"></script>
+    <script type="module" src="../src/js/ymacs-marker.js"></script>
+    <script type="module" src="../src/js/ymacs-minibuffer.js"></script>
+    <script type="module" src="../src/js/ymacs-mode-css.js"></script>
+    <script type="module" src="../src/js/ymacs-mode-js.js"></script>
+    <script type="module" src="../src/js/ymacs-mode-lisp.js"></script>
+    <script type="module" src="../src/js/ymacs-mode-markdown.js"></script>
+    <script type="module" src="../src/js/ymacs-mode-paren-match.js"></script>
+    <script type="module" src="../src/js/ymacs-mode-xml.js"></script>
+    <script type="module" src="../src/js/ymacs-regexp.js"></script>
+    <script type="module" src="../src/js/ymacs-textprop.js"></script>
+    <script type="module" src="../src/js/ymacs-tokenizer.js"></script>
+    <script type="module" src="../src/js/ymacs.js"></script>
 
-    <script src="test.js"></script>
+    <script type="module" src="test.js"></script>
   </body>
 </html>
