bundle via parcel.js

--- a/test/index.html
+++ b/test/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Ymacs -- An Emacs-like editor for the Web</title>
-    <link rel="stylesheet" type="text/css" href="../src/css/ymacs.css" />
+    <link rel="stylesheet" type="text/css" href="../dist/ymacs.css" />
+    <link rel="stylesheet" type="text/css" href="../src/css/themes/emacs-sanityinc-tomorrow-night.scss" />
     <link rel="stylesheet" type="text/css" href="test.css" />
   </head>
   <body>
@@ -13,27 +14,6 @@
     <script>
       window.YMACS_SRC_PATH = "../src/js/";
     </script>
-    <script type="module" src="../src/js/ymacs-buffer.js"></script>
-    <script type="module" src="../src/js/ymacs-commands-utils.js"></script>
-    <script type="module" src="../src/js/ymacs-commands.js"></script>
-    <script type="module" src="../src/js/ymacs-exception.js"></script>
-    <script type="module" src="../src/js/ymacs-frame.js"></script>
-    <script type="module" src="../src/js/ymacs-interactive.js"></script>
-    <script type="module" src="../src/js/ymacs-keymap-emacs.js"></script>
-    <script type="module" src="../src/js/ymacs-keymap-isearch.js"></script>
-    <script type="module" src="../src/js/ymacs-keymap.js"></script>
-    <script type="module" src="../src/js/ymacs-marker.js"></script>
-    <script type="module" src="../src/js/ymacs-minibuffer.js"></script>
-    <script type="module" src="../src/js/ymacs-mode-css.js"></script>
-    <script type="module" src="../src/js/ymacs-mode-js.js"></script>
-    <script type="module" src="../src/js/ymacs-mode-lisp.js"></script>
-    <script type="module" src="../src/js/ymacs-mode-markdown.js"></script>
-    <script type="module" src="../src/js/ymacs-mode-paren-match.js"></script>
-    <script type="module" src="../src/js/ymacs-mode-xml.js"></script>
-    <script type="module" src="../src/js/ymacs-textprop.js"></script>
-    <script type="module" src="../src/js/ymacs-tokenizer.js"></script>
-    <script type="module" src="../src/js/ymacs.js"></script>
-
     <script type="module" src="test.js"></script>
   </body>
 </html>
