--- a/test/index.html
+++ b/test/index.html
@@ -6,8 +6,10 @@
     <link rel="stylesheet" type="text/css" href="../dist/ymacs.css" />
     <link rel="stylesheet" type="text/css" href="../src/css/themes/emacs-material-dark.scss" />
     <link rel="stylesheet" type="text/css" href="../src/css/themes/emacs-sanityinc-tomorrow-night.scss" />
+    <link rel="stylesheet" type="text/css" href="../src/css/themes/emacs-sanityinc-tomorrow-day.scss" />
     <link rel="stylesheet" type="text/css" href="../src/css/themes/emacs-base16-apathy.scss" />
     <link rel="stylesheet" type="text/css" href="../src/css/themes/emacs-standard.scss" />
+    <link rel="stylesheet" type="text/css" href="../src/css/themes/emacs-spacemacs-light.scss" />
     <link rel="stylesheet" type="text/css" href="test.css" />
   </head>
   <body>
