--- a/test/index.html
+++ b/test/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" type="text/css" href="../src/css/themes/emacs-material.scss" />
     <link rel="stylesheet" type="text/css" href="../src/css/themes/emacs-sanityinc-tomorrow-night.scss" />
     <link rel="stylesheet" type="text/css" href="../src/css/themes/emacs-sanityinc-tomorrow-day.scss" />
+    <link rel="stylesheet" type="text/css" href="../src/css/themes/emacs-sanityinc-tomorrow-blue.scss" />
     <link rel="stylesheet" type="text/css" href="../src/css/themes/emacs-base16-apathy.scss" />
     <link rel="stylesheet" type="text/css" href="../src/css/themes/emacs-standard.scss" />
     <link rel="stylesheet" type="text/css" href="../src/css/themes/emacs-spacemacs-light.scss" />
