--- a/test/index.html
+++ b/test/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" type="text/css" data-ymacs-theme="sanityinc-tomorrow-blue" href="../src/css/themes/emacs-sanityinc-tomorrow-blue.scss" />
     <link rel="stylesheet" type="text/css" data-ymacs-theme="base16-apathy" href="../src/css/themes/emacs-base16-apathy.scss" />
     <link rel="stylesheet" type="text/css" href="../src/css/themes/emacs-spacemacs-light.scss" />
+    <link rel="stylesheet" type="text/css" href="../src/css/themes/emacs-standard-light.scss" />
     <link rel="stylesheet" type="text/css" href="test.css" />
   </head>
   <body>
