--- a/test/index.html
+++ b/test/index.html
@@ -4,13 +4,13 @@
     <meta charset="utf-8" />
     <title>Ymacs -- An Emacs-like editor for the Web</title>
     <link rel="stylesheet" type="text/css" href="../dist/ymacs.css" />
-    <link rel="stylesheet" type="text/css" data-ymacs-theme="material" href="../src/css/themes/emacs-material.scss" />
-    <link rel="stylesheet" type="text/css" data-ymacs-theme="sanityinc-tomorrow-night" href="../src/css/themes/emacs-sanityinc-tomorrow-night.scss" />
-    <link rel="stylesheet" type="text/css" data-ymacs-theme="sanityinc-tomorrow-day" href="../src/css/themes/emacs-sanityinc-tomorrow-day.scss" />
-    <link rel="stylesheet" type="text/css" data-ymacs-theme="sanityinc-tomorrow-blue" href="../src/css/themes/emacs-sanityinc-tomorrow-blue.scss" />
-    <link rel="stylesheet" type="text/css" data-ymacs-theme="base16-apathy" href="../src/css/themes/emacs-base16-apathy.scss" />
-    <link rel="stylesheet" type="text/css" href="../src/css/themes/emacs-spacemacs-light.scss" />
-    <link rel="stylesheet" type="text/css" href="../src/css/themes/emacs-standard-light.scss" />
+    <link rel="stylesheet" type="text/css" data-ymacs-theme="material" href="../dist/themes/material.css" />
+    <link rel="stylesheet" type="text/css" data-ymacs-theme="sanityinc-tomorrow-night" href="../dist/themes/sanityinc-tomorrow-night.css" />
+    <link rel="stylesheet" type="text/css" data-ymacs-theme="sanityinc-tomorrow-day" href="../dist/themes/sanityinc-tomorrow-day.css" />
+    <link rel="stylesheet" type="text/css" data-ymacs-theme="sanityinc-tomorrow-blue" href="../dist/themes/sanityinc-tomorrow-blue.css" />
+    <link rel="stylesheet" type="text/css" data-ymacs-theme="sanityinc-tomorrow-blue" href="../dist/themes/sanityinc-tomorrow-bright.css" />
+    <link rel="stylesheet" type="text/css" data-ymacs-theme="sanityinc-tomorrow-blue" href="../dist/themes/sanityinc-tomorrow-eighties.css" />
+    <link rel="stylesheet" type="text/css" data-ymacs-theme="base16-apathy" href="../dist/themes/base16-apathy.css" />
     <link rel="stylesheet" type="text/css" href="test.css" />
   </head>
   <body>
