--- a/test/index.html
+++ b/test/index.html
@@ -8,9 +8,12 @@
     <link rel="stylesheet" type="text/css" data-ymacs-theme="sanityinc-tomorrow-night" href="../dist/themes/sanityinc-tomorrow-night.css" />
     <link rel="stylesheet" type="text/css" data-ymacs-theme="sanityinc-tomorrow-day" href="../dist/themes/sanityinc-tomorrow-day.css" />
     <link rel="stylesheet" type="text/css" data-ymacs-theme="sanityinc-tomorrow-blue" href="../dist/themes/sanityinc-tomorrow-blue.css" />
-    <link rel="stylesheet" type="text/css" data-ymacs-theme="sanityinc-tomorrow-blue" href="../dist/themes/sanityinc-tomorrow-bright.css" />
-    <link rel="stylesheet" type="text/css" data-ymacs-theme="sanityinc-tomorrow-blue" href="../dist/themes/sanityinc-tomorrow-eighties.css" />
+    <link rel="stylesheet" type="text/css" data-ymacs-theme="sanityinc-tomorrow-bright" href="../dist/themes/sanityinc-tomorrow-bright.css" />
+    <link rel="stylesheet" type="text/css" data-ymacs-theme="sanityinc-tomorrow-eighties" href="../dist/themes/sanityinc-tomorrow-eighties.css" />
+    <link rel="stylesheet" type="text/css" data-ymacs-theme="whiteboard" href="../dist/themes/whiteboard.css" />
     <link rel="stylesheet" type="text/css" data-ymacs-theme="base16-apathy" href="../dist/themes/base16-apathy.css" />
+    <link rel="stylesheet" type="text/css" data-ymacs-theme="standard-light" href="../dist/themes/standard-light.css" />
+    <link rel="stylesheet" type="text/css" data-ymacs-theme="standard-dark" href="../dist/themes/standard-dark.css" />
     <link rel="stylesheet" type="text/css" href="test.css" />
   </head>
   <body>
