--- a/test/index.html
+++ b/test/index.html
@@ -14,6 +14,8 @@
     <link rel="stylesheet" type="text/css" data-ymacs-theme="base16-apathy" href="../dist/themes/base16-apathy.css" />
     <link rel="stylesheet" type="text/css" data-ymacs-theme="standard-light" href="../dist/themes/standard-light.css" />
     <link rel="stylesheet" type="text/css" data-ymacs-theme="standard-dark" href="../dist/themes/standard-dark.css" />
+    <link rel="stylesheet" type="text/css" data-ymacs-theme="ef-deuteranopia-light" href="../dist/themes/ef-deuteranopia-light.css" />
+    <link rel="stylesheet" type="text/css" data-ymacs-theme="ef-cyprus" href="../dist/themes/ef-cyprus.css" />
     <link rel="stylesheet" type="text/css" href="test.css" />
   </head>
   <body>
